// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptinMetrics Snapshots android render matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "off",
                          "right": "off",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "flexBasis": "0%",
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "paddingTop": 40,
                        }
                      }
                    >
                      <RCTScrollView
                        onContentSizeChange={[Function]}
                        onLayout={[Function]}
                        onScroll={[Function]}
                        scrollEventThrottle={150}
                        style={
                          {
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                          }
                        }
                        testID="meta-metrics-container"
                      >
                        <View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <Image … />
                            </View>
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                              testID="optin-metrics-title-id"
                            >
                              Improve MetaMask
                            </Text>
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                              testID="optin-metrics-privacy-policy-description"
                            >
                              We’d like to request these permissions. You can opt out or delete your usage data at any time.
                            </Text>
                            <View
                              style={[Array]}
                            >
                              <View … />
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          [
                            {
                              "display": "flex",
                              "flexDirection": "row",
                              "paddingBottom": 8,
                              "paddingLeft": 16,
                              "paddingRight": 16,
                              "paddingTop": 8,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          accessibilityLabel="Continue"
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          jestAnimatedProps={
                            {
                              "value": {},
                            }
                          }
                          jestAnimatedStyle={
                            {
                              "value": {
                                "transform": [Array],
                              },
                            }
                          }
                          jestInlineStyle={
                            [
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#131416",
                                "borderRadius": 12,
                                "columnGap": 8,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "minWidth": 80,
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingLeft": 16,
                                "paddingRight": 16,
                              },
                              {
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                            ]
                          }
                          nativeID="1"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#131416",
                                "borderRadius": 12,
                                "columnGap": 8,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "minWidth": 80,
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingLeft": 16,
                                "paddingRight": 16,
                              },
                              {
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              {
                                "transform": [Array],
                              },
                            ]
                          }
                          testID="optin-metrics-continue-button-id"
                        >
                          <Text
                            accessibilityRole="text"
                            ellipsizeMode="clip"
                            numberOfLines={1}
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            Continue
                          </Text>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                  <View
                    collapsable={false}
                    pointerEvents="box-none"
                  >
                    <View
                      accessibilityElementsHidden={false}
                      importantForAccessibility="auto"
                      onLayout={[Function]}
                      pointerEvents="box-none"
                      style={null}
                    >
                      <View
                        collapsable={false}
                        pointerEvents="box-none"
                        style={
                          {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "zIndex": 0,
                          }
                        }
                      >
                        <View
                          collapsable={false}
                          style={
                            {
                              "backgroundColor": "rgb(255, 255, 255)",
                              "borderBottomColor": "rgb(216, 216, 216)",
                              "flex": 1,
                              "shadowColor": "rgb(216, 216, 216)",
                              "shadowOffset": {
                                "height": 0.5,
                                "width": 0,
                              },
                              "shadowOpacity": 0.85,
                              "shadowRadius": 0,
                            }
                          }
                        />
                      </View>
                      <View
                        collapsable={false}
                        pointerEvents="box-none"
                        style={
                          {
                            "height": 76,
                            "maxHeight": undefined,
                            "minHeight": undefined,
                            "opacity": undefined,
                            "transform": undefined,
                          }
                        }
                      >
                        <View
                          pointerEvents="none"
                          style={
                            {
                              "height": 20,
                            }
                          }
                        />
                        <View
                          pointerEvents="box-none"
                          style={
                            {
                              "alignItems": "center",
                              "flex": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            pointerEvents="box-none"
                            style={
                              {
                                "marginHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="header"
                              aria-level="1"
                              collapsable={false}
                              numberOfLines={1}
                              onLayout={[Function]}
                              style={[Object]}
                            >
                              OptinMetrics
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`OptinMetrics Snapshots android render matches snapshot with status bar height to zero 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "off",
                          "right": "off",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "flexBasis": "0%",
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "paddingTop": 40,
                        }
                      }
                    >
                      <RCTScrollView
                        onContentSizeChange={[Function]}
                        onLayout={[Function]}
                        onScroll={[Function]}
                        scrollEventThrottle={150}
                        style={
                          {
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                          }
                        }
                        testID="meta-metrics-container"
                      >
                        <View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <Image … />
                            </View>
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                              testID="optin-metrics-title-id"
                            >
                              Improve MetaMask
                            </Text>
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                              testID="optin-metrics-privacy-policy-description"
                            >
                              We’d like to request these permissions. You can opt out or delete your usage data at any time.
                            </Text>
                            <View
                              style={[Array]}
                            >
                              <View … />
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          [
                            {
                              "display": "flex",
                              "flexDirection": "row",
                              "paddingBottom": 8,
                              "paddingLeft": 16,
                              "paddingRight": 16,
                              "paddingTop": 8,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          accessibilityLabel="Continue"
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          jestAnimatedProps={
                            {
                              "value": {},
                            }
                          }
                          jestAnimatedStyle={
                            {
                              "value": {
                                "transform": [Array],
                              },
                            }
                          }
                          jestInlineStyle={
                            [
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#131416",
                                "borderRadius": 12,
                                "columnGap": 8,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "minWidth": 80,
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingLeft": 16,
                                "paddingRight": 16,
                              },
                              {
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                            ]
                          }
                          nativeID="2"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#131416",
                                "borderRadius": 12,
                                "columnGap": 8,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "minWidth": 80,
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingLeft": 16,
                                "paddingRight": 16,
                              },
                              {
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              {
                                "transform": [Array],
                              },
                            ]
                          }
                          testID="optin-metrics-continue-button-id"
                        >
                          <Text
                            accessibilityRole="text"
                            ellipsizeMode="clip"
                            numberOfLines={1}
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            Continue
                          </Text>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                  <View
                    collapsable={false}
                    pointerEvents="box-none"
                  >
                    <View
                      accessibilityElementsHidden={false}
                      importantForAccessibility="auto"
                      onLayout={[Function]}
                      pointerEvents="box-none"
                      style={null}
                    >
                      <View
                        collapsable={false}
                        pointerEvents="box-none"
                        style={
                          {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "zIndex": 0,
                          }
                        }
                      >
                        <View
                          collapsable={false}
                          style={
                            {
                              "backgroundColor": "rgb(255, 255, 255)",
                              "borderBottomColor": "rgb(216, 216, 216)",
                              "flex": 1,
                              "shadowColor": "rgb(216, 216, 216)",
                              "shadowOffset": {
                                "height": 0.5,
                                "width": 0,
                              },
                              "shadowOpacity": 0.85,
                              "shadowRadius": 0,
                            }
                          }
                        />
                      </View>
                      <View
                        collapsable={false}
                        pointerEvents="box-none"
                        style={
                          {
                            "height": 76,
                            "maxHeight": undefined,
                            "minHeight": undefined,
                            "opacity": undefined,
                            "transform": undefined,
                          }
                        }
                      >
                        <View
                          pointerEvents="none"
                          style={
                            {
                              "height": 20,
                            }
                          }
                        />
                        <View
                          pointerEvents="box-none"
                          style={
                            {
                              "alignItems": "center",
                              "flex": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            pointerEvents="box-none"
                            style={
                              {
                                "marginHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="header"
                              aria-level="1"
                              collapsable={false}
                              numberOfLines={1}
                              onLayout={[Function]}
                              style={[Object]}
                            >
                              OptinMetrics
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`OptinMetrics Snapshots iOS renders correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                OptinMetrics
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "off",
                          "right": "off",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "flexBasis": "0%",
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "paddingTop": 40,
                        }
                      }
                    >
                      <RCTScrollView
                        onContentSizeChange={[Function]}
                        onLayout={[Function]}
                        onScroll={[Function]}
                        scrollEventThrottle={150}
                        style={
                          {
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                          }
                        }
                        testID="meta-metrics-container"
                      >
                        <View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <Image … />
                            </View>
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                              testID="optin-metrics-title-id"
                            >
                              Improve MetaMask
                            </Text>
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                              testID="optin-metrics-privacy-policy-description"
                            >
                              We’d like to request these permissions. You can opt out or delete your usage data at any time.
                            </Text>
                            <View
                              style={[Array]}
                            >
                              <View … />
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          [
                            {
                              "display": "flex",
                              "flexDirection": "row",
                              "paddingBottom": 8,
                              "paddingLeft": 16,
                              "paddingRight": 16,
                              "paddingTop": 8,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          accessibilityLabel="Continue"
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          jestAnimatedProps={
                            {
                              "value": {},
                            }
                          }
                          jestAnimatedStyle={
                            {
                              "value": {
                                "transform": [Array],
                              },
                            }
                          }
                          jestInlineStyle={
                            [
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#131416",
                                "borderRadius": 12,
                                "columnGap": 8,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "minWidth": 80,
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingLeft": 16,
                                "paddingRight": 16,
                              },
                              {
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                            ]
                          }
                          nativeID="0"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#131416",
                                "borderRadius": 12,
                                "columnGap": 8,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "minWidth": 80,
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingLeft": 16,
                                "paddingRight": 16,
                              },
                              {
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              {
                                "transform": [Array],
                              },
                            ]
                          }
                          testID="optin-metrics-continue-button-id"
                        >
                          <Text
                            accessibilityRole="text"
                            ellipsizeMode="clip"
                            numberOfLines={1}
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            Continue
                          </Text>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
